# ZeroIn-Crosshair

./: Cargo.toml  LICENSE  README.md  build.rs  config.ini  deny.toml
.github/workflows/: ci.yml
benches/: benches.rs  canvas_bench.rs  config_bench.rs  crosshair_bench.rs  profiles_bench.rs
src/: canvas.rs  config.rs  crosshair.rs  lib.rs  main.rs  profiles.rs
src/platform/: linux.rs  mod.rs  windows.rs
