[package]
name = "ZeroIn"
version = "0.5.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
softbuffer = "0.4"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
tray-icon = { version = "0.21", default-features = false }
gtk = { version = "0.18", features = ["v3_24"] }
